crates/pardosa-genome/tests/compile_fail/not_event_safe.stderr
error[E0277]: `NotBlessed` is not `EventSafe`
  --> tests/compile_fail/not_event_safe.rs:13:24
   |
13 |     require_event_safe(NotBlessed);
   |     ------------------ ^^^^^^^^^^ needs `#[derive(GenomeSafe)]`
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `EventSafe` is not implemented for `NotBlessed`
  --> tests/compile_fail/not_event_safe.rs:8:1
   |
 8 | struct NotBlessed;
   | ^^^^^^^^^^^^^^^^^
   = note: Only types blessed by `#[derive(GenomeSafe)]` (or workspace-internal impls) may implement `EventSafe`. See GEN-0036.
   = help: the following other types implement trait `EventSafe`:
             &[u8]
             &str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and $N others
note: required by a bound in `require_event_safe`
  --> tests/compile_fail/not_event_safe.rs:10:26
   |
10 | fn require_event_safe<T: EventSafe>(_: T) {}
   |                          ^^^^^^^^^ required by this bound in `require_event_safe`
